force-app/main/default/objects/Match__c/fields/Match_Date__c.field-meta.xml
<CustomField>
    <fullName>Match_Date__c</fullName>
    <label>Match Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>