force-app/main/default/objects/Match__c/fields/Team_1__c.field-meta.xml
<CustomField>
    <fullName>Team_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team 1</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Team1_Matches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>