force-app/main/default/objects/Match__c/fields/Team_2__c.field-meta.xml
<CustomField>
    <fullName>Team_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team 2</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Matches (Team 2)</relationshipLabel>
    <relationshipName>Team2_Matches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>