force-app/main/default/objects/Match__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <formula>IF(Team_1_Score__c &gt; Team_2_Score__c, Team_1__r.Name, IF(Team_1_Score__c &lt; Team_2_Score__c, Team_2__r.Name, &quot;DRAW&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winner</label>
    <type>Text</type>
</CustomField>