force-app/main/default/objects/Match__c/validationRules/Same_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Team</fullName>
    <active>true</active>
    <errorConditionFormula>Team_1__c ==  Team_2__c</errorConditionFormula>
    <errorMessage>Enter Different Teams for the Match</errorMessage>
</ValidationRule>