force-app/main/default/objects/Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Team_1__c</columns>
    <columns>Team_2__c</columns>
    <columns>Team_1_Score__c</columns>
    <columns>Team_2_Score__c</columns>
    <columns>Match_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>